# 3D-Stokesian-Dynamics-formulation

./: .gitignore
surge_3d_brady/: CMakeLists.txt  Makefile  README.md  requirements.txt  surge_pair_resistance.hpp
surge_3d_brady/examples/: brady1984_monolayer.cpp  smoke_checks.cpp  two_sphere_trajectory.cpp
surge_3d_brady/include/surge/brady1984/: monolayer.hpp
surge_3d_brady/include/surge/sd3d/: coefficients.hpp  core.hpp  ewald.hpp  near_field.hpp  projection.hpp  solver.hpp  time_integrator.hpp
surge_3d_brady/results/: two_sphere_trajectory.csv
surge_3d_brady/results/brady_A_1000/: run_A_angular.csv  run_A_radial.csv  run_A_trajectory.csv  run_A_y.csv
surge_3d_brady/scripts/: plot_brady1984.py  plot_trajectory.py
surge_3d_brady/src/: brady1984_monolayer.cpp  coefficients.cpp  ewald.cpp  near_field.cpp  projection.cpp  solver.cpp  time_integrator.cpp
